--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,21 @@
+[build]
+  command = "npm run build"
+  publish = "dist/public"
+
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
+
+# API routes - must come first
 [[redirects]]
   force = true
   from = "/api/*"
   status = 200
   to = "/.netlify/functions/api/:splat"
+
+# SPA fallback - must come last
+# This ensures all non-API routes are handled by React Router
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
