--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,10 @@
   publish = "dist/public"
 
 [functions]
-  external_node_modules = ["express"]
+  directory = "netlify/functions"
+  external_node_modules = ["express", "@neondatabase/serverless", "drizzle-orm"]
   node_bundler = "esbuild"
+  included_files = ["server/**", "shared/**"]
 
 # API routes - must come first
 [[redirects]]
